# AustereEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Assets/Shaders/: Main.frag  Main.vert  Skybox.frag  Skybox.vert
Engine/: CMakeLists.txt
Engine/Include/AE/: PCH.hpp
Engine/Include/AE/Common/: TextureCommon.hpp
Engine/Include/AE/Core/: Application.hpp  Engine.hpp  EngineSettings.hpp  Logger.hpp  Logger.inl  Window.hpp
Engine/Include/AE/Input/: Keyboard.hpp  Manager.hpp  Mouse.hpp
Engine/Include/AE/Lighting/: Manager.hpp  Manager.inl  Sources.hpp
Engine/Include/AE/Math/: AABB.hpp  Frustum.hpp  Transform.hpp
Engine/Include/AE/Platform/: Input.hpp
Engine/Include/AE/Rendering/: Camera.hpp  Color.hpp  Framebuffer.hpp  Material.hpp  Mesh.hpp  Renderer.hpp
Engine/Include/AE/Resources/: Cubemap.hpp  Manager.hpp  Managers.hpp  Model.hpp  Shader.hpp  Texture.hpp  TextureArray.hpp
Engine/Include/AE/Scene/: Manager.hpp  Node.hpp  Scene.hpp
Engine/Include/AE/Utils/: TextureUtils.hpp
Engine/Include/AE/World/: Skybox.hpp
Engine/Source/: Window.cpp
Engine/Source/Core/: Application.cpp  Engine.cpp  Window.cpp
Engine/Source/Input/: Keyboard.cpp  Manager.cpp  Mouse.cpp
Engine/Source/Lighting/: Manager.cpp
Engine/Source/Lighting/Sources/: DirectionalLight.cpp  PointLight.cpp  SpotLight.cpp
Engine/Source/Math/: AABB.cpp  Frustum.cpp  Transform.cpp
Engine/Source/Platform/Input/: Keyboard.cpp  Manager.cpp
Engine/Source/Rendering/: Camera.cpp  Color.cpp  Framebuffer.cpp  Material.cpp  Mesh.cpp  Renderer.cpp
Engine/Source/Resources/: Cubemap.cpp  ModelNode.cpp  Shader.cpp  Texture.cpp  TextureArray.cpp
Engine/Source/Resources/Managers/: CubemapManager.cpp  ModelManager.cpp  ShaderManager.cpp  TextureManager.cpp
Engine/Source/Scene/: Manager.cpp  Node.cpp  Scene.cpp
Game/: CMakeLists.txt
Game/Include/Game/: Game.hpp  Nodes.hpp
Game/Source/: Main.cpp
Game/Source/Game/: Game.cpp
Game/Source/Game/Nodes/: CameraNode.cpp  TestNode.cpp
Libs/: CMakeLists.txt
Libs/glad/include/glad/: gl.h
Libs/glad/src/: gl.c
